# GFoldLander

./: .gitignore  DEPRECATED_ROADMAP.md  README.md  requirements.txt
DEPRECATED_two_d_version/: README.md  design_requirements_demo.py  design_requirements_demo_full_pid.py  lunarlander_offline_gfold.py  lunarlander_pid_only.py  lunarlander_rotation.drawio  requirements.txt
DEPRECATED_two_d_version/cartpole/: tog.py
DEPRECATED_two_d_version/control_and_ai/: pd_designer.py  pid.py  pid_designer.py
DEPRECATED_two_d_version/environments/: lunarlanderfuel.py
DEPRECATED_two_d_version/paper/: .gitignore  README.md  compile.sh  the_paper.tex
helloworldcxx/: CMakeLists.txt  README.md  build_shortcut.sh  main.cxx  terrain.cxx  terrain.h
mini_tutorials/: pid_control_getting_started.md
scipy_references/: README.md  slsqp_edge_cases.md
the_paper/: .gitignore  README.md  publication_choices.md
the_paper/main/: README.md  citations.bib  compile.sh  compile_html.sh  diagrams.drawio  make4htconf.cfg  manuscript.tex  pandoc-metadata.yaml
three_d_version/: .env  README.md  design_requirements_demo.py  diagrams.drawio  lunarlander_offline_gfold.py  postprocess_episode_stats.py  rocket_model_preview.py  solvers_test.py
three_d_version/control_and_ai/: error_stats.py
three_d_version/models/: controller_estimated_shape.bam  controller_estimated_shape.blend  flag.bam  flag.blend  plant.py  rocket.bam  terrain.py  wind.py
